# biped-planner

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
data/: terrain_map.npy
src/: environment.py  planner.py  terrain.py  visualize.py
