[project]
name = "biped-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contourpy>=1.3.3",
    "cycler>=0.12.1",
    "drake>=1.45.0",
    "fonttools>=4.60.1",
    "gymnasium>=1.2.1",
    "imageio>=2.37.0",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "pydot>=4.0.1",
    "pygame>=2.6.1",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "rl-zoo3>=2.7.0",
    "sb3-contrib>=2.7.0",
    "sbx-rl>=0.23.0",
    "six>=1.17.0",
    "stable-baselines3>=2.7.0",
    "swanlab>=0.6.10",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
